--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-pdf": "^4.1.0",
-    "react-scripts": "3.0.1"
+    "react-router-bootstrap": "^0.25.0",
+    "react-scripts": "3.0.1",
+    "tern": "^0.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.0.1"
   }
 }
